# learnc

./: .breakpoints  .replit  CMakeLists.txt  Makefile  compile_commands.json  compile_commands.json..  replit.nix
include/: list.h  logging.h  types.h
src/: main.c
